--- a/src/html/list.html
+++ b/src/html/list.html
@@ -20,7 +20,6 @@
         <div id="loading" style="display: flex; justify-content: center; text-align: center; font-size: 16px; padding: 20px 0;">加载中...</div>
         <p id="remind" style="text-align: center; font-size: 20px; padding: 20px 0;"></p>
     </div>
-    <div class="submit_button hide">开始测评</div>
 
 </div>
 <div id="qrcode"></div>
@@ -42,7 +41,7 @@
     function showCode(url) {
 		if(document.getElementById("loading")) {
 			document.getElementById("loading").innerText = "";
-			document.getElementById("remind").innerText = "当前浏览器版本太低，请升级到最新版或者扫描上图的二维码用手机(QQ/微信)试试";
+			document.getElementById("remind").innerText = "当前浏览器版本太低，请升级到最新版或者扫描上图的二维码用手机QQ试试";
 
 			var qrcode = new QRCode(document.getElementById("loading"), {
                 width : 200,
@@ -59,7 +58,7 @@
     <div class="title">{{periodTitle}}</div>
     <!--<div class="topic_title">chose</div>-->
     <form class="border-1px border-all form">
-        {{if deptList.length > 0}}
+        {{if deptList && deptList.length > 0}}
         {{each deptList}}
         <div class="answer border-1px border-bottom">
             <input id={{$value.deptId}} type="radio" name="1" value={{$value.deptId}} apFlag={{$value.apFlag+''}}
@@ -68,6 +67,7 @@
             <span {{if $value.apFlag}}class="finished_text"{{/if}}>{{$value.deptName}}</span>
         </div>
         {{/each}}
+        <div class="submit_button hide">开始测评</div>
         {{/if}}
     </form>
 </script>
